syntax = "proto3";

package auth;


// option go_package = "orenvadi.sso.v1;ssov1";

import "buf/validate/validate.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// Auth is service for managing permissions and roles.
service Auth {
  // Register registers a new user.
  rpc Register (RegisterRequest) returns (RegisterResponse);
  // Login logs in a user and returns an auth token.
  rpc Login (LoginRequest) returns (LoginResponse);

  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);

  rpc ConfirmUserEmail (ConfirmUserEmailRequest) returns (ConfirmUserEmailResponse);

  // IsAdmin checks whether a user is an admin.
  rpc IsAdmin (IsAdminRequest) returns (IsAdminResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);

  rpc GetUserData (GetUserDataRequest) returns (GetUserDataResponse);

  rpc SendCodeToResetPassword (SendCodeToResetPasswordRequest) returns (SendCodeToResetPasswordResponse);

  rpc SetNewPassword(SetNewPasswordRequest) returns (SetNewPasswordResponse);
}

message IsAdminRequest {
  int64 user_id = 1; // User ID to validate.
}

message IsAdminResponse {
  bool is_admin = 1;  // Indicates whether the user is an admin.
}

message RegisterRequest {
  string first_name = 1    [(buf.validate.field).string.min_len=1]; // First name of the user to register. 
  string last_name = 2     [(buf.validate.field).string.min_len=1]; // Last name of the user to register. 
  string phone_number = 3  [(buf.validate.field).string.min_len=5]; // Last name of the user to register. 
  string email = 4         [(buf.validate.field).string.email = true]; // Email of the user to register.
  string password = 5      [(buf.validate.field).string.min_len=6]; // Password of the user to register.
  int64 app_id = 6;
}

message RegisterResponse {
  int64 user_id = 1; // User ID of the registered user.
  string access_token = 2; // Auth access token of the logged in user.
  string refresh_token = 3; // Refresh token to refresh expired access token 
}

message LoginRequest {
  string email = 1     [(buf.validate.field).string.email = true]; // Email of the user to login.
  string password = 2  [(buf.validate.field).string.min_len=6];// Password of the user to login.
  int64 app_id = 3; // ID of the app to login to.
}

message LoginResponse {
  string access_token = 1; // Auth access token of the logged in user.
}

message LogoutRequest {
  string token = 1; // Auth token of the user to logout.
  int64 app_id = 2;
}

message LogoutResponse {
  bool success = 1; // Indicates whether the logout was successful.
}

message UpdateUserRequest {
  string first_name = 1; // Updated first name of the user.
  string last_name = 2; // Updated last name of the user.
  string phone_number = 3; // Updated phone number of the user.
  string email = 4; // Updated email of the user.
  int64 app_id = 5;
}

message UpdateUserResponse {
  bool success = 1; // Indicates whether the update was successful.
}


message ConfirmUserEmailRequest{
  string confirm_code = 1       [(buf.validate.field).string.len=6];
  int64 app_id = 2;
}

message ConfirmUserEmailResponse{
  bool success = 1; // Indicates whether the confirm was successful.
}


message GetUserDataRequest{
  int64 app_id = 1;
}

message GetUserDataResponse{
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string phone_number = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  string email = 7;
}


message SendCodeToResetPasswordRequest{
  string email = 1      [(buf.validate.field).string.email = true];
}

message SendCodeToResetPasswordResponse{
  bool success = 1;
}


message SetNewPasswordRequest{
  string confirm_code = 1       [(buf.validate.field).string.len=6];
  string email = 2              [(buf.validate.field).string.email = true];
  string new_password = 3       [(buf.validate.field).string.min_len=6];
}


message SetNewPasswordResponse{
  bool success = 1;
}
